minggu-01/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mini-prod
  labels:
    env: development
    learning-week: "01"
