minggu-01/manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: mini-prod
spec:
  type: ClusterIP
  selector:
    app: nginx-web
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
